Add basic styles for the grid

--- a/index.html
+++ b/index.html
@@ -17,9 +17,100 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <p>Wanna Buy? Yes please!</p>
+		
+		<div class="wrapper">
+	
+	        <header class="site-header">
+	        	<nav class="container">
+	        		<h1><a href="/">Wanna Buy</a></h1>
+	        	</nav>
+	        </header>
+			
+			<section class="list-container container">
+				<ul class="list">
+					<li class="list-item">
+						<a href="/" title="Name of the object - Store name">
+							<article class="list-item-article">
+								<figure><img src="img/daily-obj.png" alt="" /></figure>
+								<header>
+									<h3>Daily Objects</h3>
+									<h1>Atym Card Wallet</h1>
+									<h2>₹ 345</h2>
+								</header>
+							</article>
+						</a>
+					</li>
+					<li class="list-item">
+						<a href="/" title="Name of the object - Store name">
+							<article class="list-item-article">
+								<figure><img src="img/daily-obj.png" alt="" /></figure>
+								<header>
+									<h3>Daily Objects</h3>
+									<h1>Atym Card Wallet</h1>
+									<h2>₹ 345</h2>
+								</header>
+							</article>
+						</a>
+					</li>
+					<li class="list-item">
+						<a href="/" title="Name of the object - Store name">
+							<article class="list-item-article">
+								<figure><img src="img/daily-obj.png" alt="" /></figure>
+								<header>
+									<h3>Daily Objects</h3>
+									<h1>Atym Card Wallet</h1>
+									<h2>₹ 345</h2>
+								</header>
+							</article>
+						</a>
+					</li>
+					<li class="list-item">
+						<a href="/" title="Name of the object - Store name">
+							<article class="list-item-article">
+								<figure><img src="img/daily-obj.png" alt="" /></figure>
+								<header>
+									<h3>Daily Objects</h3>
+									<h1>Atym Card Wallet</h1>
+									<h2>₹ 345</h2>
+								</header>
+							</article>
+						</a>
+					</li>
+					<li class="list-item">
+						<a href="/" title="Name of the object - Store name">
+							<article class="list-item-article">
+								<figure><img src="img/daily-obj.png" alt="" /></figure>
+								<header>
+									<h3>Daily Objects</h3>
+									<h1>Atym Card Wallet</h1>
+									<h2>₹ 345</h2>
+								</header>
+							</article>
+						</a>
+					</li>
+					<li class="list-item">
+						<a href="/" title="Name of the object - Store name">
+							<article class="list-item-article">
+								<figure><img src="img/daily-obj.png" alt="" /></figure>
+								<header>
+									<h3>Daily Objects</h3>
+									<h1>Atym Card Wallet</h1>
+									<h2>₹ 345</h2>
+								</header>
+							</article>
+						</a>
+					</li>
+				</ul>
+			</section>
+			<footer class="site-footer">
+				<p>
+					Put together in Goa, by <a href="#">Joy</a> & <a href="#">Kamal</a>
+				</p>
+				<p>
+					© is fallacy. Koi value nhi deta aaj kal.
+				</p>
+			</footer>
+		</div>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
