Open graph changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Soochi - List of beautiful objects</title>
+  <title>Soochi</title>
 
   <meta charset="UTF-8">
   <meta name="google" content="notranslate">
@@ -11,10 +11,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="HandheldFriendly" content="True">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Facebook / Open Graph -->
+  <meta property="og:title" content="Soochi">
+  <meta property="og:image" content="/images/fb-open-graph.png">
+  <meta property="og:description" content="Soochi is a list of well designed products.">
+  <meta property="og:site_name" content="Soochi">
+  
+  <!-- Twitter cards -->
+  <meta name="twitter:title" content="Soochi">
+  <meta name="twitter:description" content="Soochi is a list of well designed products.">
+  <meta name="twitter:image" content="/images/fb-open-graph.png">
 
-  <meta name="description" content="List of beautiful objects">
+  <meta name="description" content="Soochi is a list of well designed products.">
   
   <link rel="stylesheet" href="css/app.css" media="screen" title="no title" charset="utf-8">
+  
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
 </head>
   
@@ -58,7 +71,7 @@
 
 
 							<li class="list-item">
-								<a href="http://www.amazon.in/dp/B00OBRE5UE/" title="Samsung 850 EVO 500GB 2.5-Inch SATA III Internal SSD (MZ-75E500B/AM) - Highest rated" target="_blank">
+								<a href="http://www.amazon.in/dp/B00OBRE5UE/" title="Samsung 850 EVO 500GB 2.5-Inch SATA III Internal SSD (MZ-75E500B/AM) - Highest customer ratings" target="_blank">
 									<article class="list-item-article">
 										<figure>
 											<img data-src="http://ecx.images-amazon.com/images/I/71K15cYF8uL._SL1500_.jpg" src="/images/bg.png" alt="" />
@@ -70,7 +83,7 @@
 											<h3 class="store-name">Amazon</h3>
 											<h1 class="produc-name">Samsung 850 EVO 500GB 2.5-Inch SATA III Internal SSD (MZ-75E500B/AM)</h1>
 											<h2 class="price">₹ 13,999</h2>
-											<h4 class="reason">Highest rated</h4>
+											<h4 class="reason">Highest customer ratings</h4>
 										</header>
 									</article>
 								</a>
@@ -118,7 +131,7 @@
 
 
 							<li class="list-item">
-								<a href="https://www.letternote.in/products/good-things-take-time-framed-art" title="Good things take time framed art - For your smart home" target="_blank">
+								<a href="https://www.letternote.in/products/good-things-take-time-framed-art" title="Good things take time framed art - Remind this yourself everyday" target="_blank">
 									<article class="list-item-article">
 										<figure>
 											<img data-src="https://cdn.shopify.com/s/files/1/1021/0585/products/AP_goodthings_512x512.jpg" src="/images/bg.png" alt="" />
@@ -130,7 +143,7 @@
 											<h3 class="store-name">Letternote</h3>
 											<h1 class="produc-name">Good things take time framed art</h1>
 											<h2 class="price">₹ 1,750</h2>
-											<h4 class="reason">For your smart home</h4>
+											<h4 class="reason">Remind this yourself everyday</h4>
 										</header>
 									</article>
 								</a>
@@ -178,7 +191,7 @@
 
 
 							<li class="list-item">
-								<a href="http://www.amazon.in/Nikon-Nikkor-Prime-Digital-Camera/dp/B001S2PPT0/" title="Nikon AF-S DX Nikkor 35mm f/1.8G Prime Lens for Nikon Digital SLR Camera (Black) - No brainer!" target="_blank">
+								<a href="http://www.amazon.in/Nikon-Nikkor-Prime-Digital-Camera/dp/B001S2PPT0/" title="Nikon AF-S DX Nikkor 35mm f/1.8G Prime Lens for Nikon Digital SLR Camera (Black) - Ultimate value for money" target="_blank">
 									<article class="list-item-article">
 										<figure>
 											<img data-src="http://ecx.images-amazon.com/images/I/41FtgQymFDL.jpg" src="/images/bg.png" alt="" />
@@ -190,7 +203,7 @@
 											<h3 class="store-name">Amazon</h3>
 											<h1 class="produc-name">Nikon AF-S DX Nikkor 35mm f/1.8G Prime Lens for Nikon Digital SLR Camera (Black)</h1>
 											<h2 class="price">₹ 9,990</h2>
-											<h4 class="reason">No brainer!</h4>
+											<h4 class="reason">Ultimate value for money</h4>
 										</header>
 									</article>
 								</a>
@@ -238,26 +251,6 @@
 
 
 							<li class="list-item">
-								<a href="http://www.theelephantcompany.com/tech-travel-accessories/mousepads/paaji-mousepad.html" title="Paaji Mousepad - Because Paaji" target="_blank">
-									<article class="list-item-article">
-										<figure>
-											<img data-src="http://www.theelephantcompany.com/media/catalog/product/cache/1/image/1315x1319/9df78eab33525d08d6e5fb8d27136e95/i/m/img_0344_1.1477633932.jpg" src="/images/bg.png" alt="" />
-											<noscript>
-												<img src="http://www.theelephantcompany.com/media/catalog/product/cache/1/image/1315x1319/9df78eab33525d08d6e5fb8d27136e95/i/m/img_0344_1.1477633932.jpg" />
-											</noscript>
-										</figure>
-										<header>
-											<h3 class="store-name">The Elephant Company</h3>
-											<h1 class="produc-name">Paaji Mousepad</h1>
-											<h2 class="price">₹ 299</h2>
-											<h4 class="reason">Because Paaji</h4>
-										</header>
-									</article>
-								</a>
-							</li>
-
-
-							<li class="list-item">
 								<a href="http://www.happilyunmarried.com/products/bar/fuh-fip-flask.html" title="Fuh Hip Flask - Because Fu*k everything" target="_blank">
 									<article class="list-item-article">
 										<figure>
@@ -277,20 +270,202 @@
 							</li>
 
 
+							<li class="list-item">
+								<a href="https://www.marchtee.com/grey" title="The March Tee - 100% Supima Cotton" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="https://www.marchtee.com/Content/images/first-tee.jpg" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="https://www.marchtee.com/Content/images/first-tee.jpg" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">The March Tee</h3>
+											<h1 class="produc-name">The March Tee</h1>
+											<h2 class="price">₹ 1,500</h2>
+											<h4 class="reason">100% Supima Cotton</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="https://www.flyingsquirrel.in/moka-pot-espresso-brewer-kit" title="Moka Pot Espresso Brewer Kit - Amazing shots of espresso every morning" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="https://www.flyingsquirrel.in/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/m/o/moka_pot_espresso_kit_2_1.jpg" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="https://www.flyingsquirrel.in/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/m/o/moka_pot_espresso_kit_2_1.jpg" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">The Flying Squirrel</h3>
+											<h1 class="produc-name">Moka Pot Espresso Brewer Kit</h1>
+											<h2 class="price">₹ 1,600</h2>
+											<h4 class="reason">Amazing shots of espresso every morning</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="http://www.amazon.in/MoMa-MUJI-Aluminum-Fountain-Pen/dp/B00MDRZLHA/" title="MoMa MUJI Aluminum Fountain Pen - Light, smooth &amp; basic" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="http://ecx.images-amazon.com/images/I/51kVaz73ZaL._SL1260_.jpg" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="http://ecx.images-amazon.com/images/I/51kVaz73ZaL._SL1260_.jpg" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Amazon</h3>
+											<h1 class="produc-name">MoMa MUJI Aluminum Fountain Pen</h1>
+											<h2 class="price">₹ 2,732</h2>
+											<h4 class="reason">Light, smooth &amp; basic</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="https://www.flipkart.com/google-chromecast-2-media-streaming-device/p/itmeh8vyyrgzymzq" title="Google Chromecast 2 Media Streaming Device (Black) - Dumb to smart converter" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="https://rukminim1.flixcart.com/image/832/832/selector-box/9/b/h/google-chromecast-2-original-imaemyhfaapzadpq.jpeg?q&#x3D;70" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="https://rukminim1.flixcart.com/image/832/832/selector-box/9/b/h/google-chromecast-2-original-imaemyhfaapzadpq.jpeg?q&#x3D;70" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Flipkart</h3>
+											<h1 class="produc-name">Google Chromecast 2 Media Streaming Device (Black)</h1>
+											<h2 class="price">₹ 3,399</h2>
+											<h4 class="reason">Dumb to smart converter</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="http://www.amazon.in/26800mAh-Portable-RAVPower-External-Technology/dp/B012NIQG5E" title="RAVPower 3-Port External Battery Pack Power Bank - 26800mAh - Most Compact Portable Charger" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="http://ecx.images-amazon.com/images/I/51sKuMl0YkL._SL1000_.jpg" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="http://ecx.images-amazon.com/images/I/51sKuMl0YkL._SL1000_.jpg" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Amazon</h3>
+											<h1 class="produc-name">RAVPower 3-Port External Battery Pack Power Bank - 26800mAh</h1>
+											<h2 class="price">₹ 6,884</h2>
+											<h4 class="reason">Most Compact Portable Charger</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="http://analogwatchco.com/leather-blackwood-wooden-timepiece" title="Carpenter Watch Collection - Solid Pieces of Wood" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="https://static1.squarespace.com/static/51633bade4b03e4701a31f70/52edc0b1e4b0358dd4de9b25/5401492ee4b0a7034af9591b/1409370422731/l.jpg?format&#x3D;1000w" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="https://static1.squarespace.com/static/51633bade4b03e4701a31f70/52edc0b1e4b0358dd4de9b25/5401492ee4b0a7034af9591b/1409370422731/l.jpg?format&#x3D;1000w" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Analog Watch co</h3>
+											<h1 class="produc-name">Carpenter Watch Collection</h1>
+											<h2 class="price">₹ 10,019</h2>
+											<h4 class="reason">Solid Pieces of Wood</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="https://www.kickstarter.com/projects/1024689211/que-bottle-the-fashionable-and-collapsible-travel" title="que Bottle: The Fashionable &amp; Collapsible Travel Bottle - Unique spiral design" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="https://ksr-ugc.imgix.net/assets/013/867/379/21cd225f3913fd2be1a25c4726684702_original.gif?w&#x3D;680&amp;fit&#x3D;max&amp;v&#x3D;1474838626&amp;q&#x3D;92&amp;s&#x3D;13974f94bb8374979c799b2ea6092593" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="https://ksr-ugc.imgix.net/assets/013/867/379/21cd225f3913fd2be1a25c4726684702_original.gif?w&#x3D;680&amp;fit&#x3D;max&amp;v&#x3D;1474838626&amp;q&#x3D;92&amp;s&#x3D;13974f94bb8374979c799b2ea6092593" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Kickstarter</h3>
+											<h1 class="produc-name">que Bottle: The Fashionable &amp; Collapsible Travel Bottle</h1>
+											<h2 class="price">₹ 1,001</h2>
+											<h4 class="reason">Unique spiral design</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="http://www.amazon.in/Bodum-Brazil-Shatterproof-French-Coffee/dp/B002UG46DO/" title="Bodum Brazil Shatterproof 8-Cup French Press Coffee Maker - heat-resistant, shatterproof SAN plastic beaker" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="http://ecx.images-amazon.com/images/I/61kupSu5F-L._SL1500_.jpg" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="http://ecx.images-amazon.com/images/I/61kupSu5F-L._SL1500_.jpg" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Amazon</h3>
+											<h1 class="produc-name">Bodum Brazil Shatterproof 8-Cup French Press Coffee Maker</h1>
+											<h2 class="price">₹ 1,838</h2>
+											<h4 class="reason">heat-resistant, shatterproof SAN plastic beaker</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
+							<li class="list-item">
+								<a href="http://www.amazon.in/Braun-MG5090-Wet-Multi-Groomer/dp/B017LSXT2O/" title="Braun MG5090 Wet and Dry Multi Groomer - Ultimate shaver + trimmer" target="_blank">
+									<article class="list-item-article">
+										<figure>
+											<img data-src="http://ecx.images-amazon.com/images/I/711wu7q1qHL._SL1500_.jpg" src="/images/bg.png" alt="" />
+											<noscript>
+												<img src="http://ecx.images-amazon.com/images/I/711wu7q1qHL._SL1500_.jpg" />
+											</noscript>
+										</figure>
+										<header>
+											<h3 class="store-name">Amazon</h3>
+											<h1 class="produc-name">Braun MG5090 Wet and Dry Multi Groomer</h1>
+											<h2 class="price">₹ 4,899</h2>
+											<h4 class="reason">Ultimate shaver + trimmer</h4>
+										</header>
+									</article>
+								</a>
+							</li>
+
+
 				</ul>
 			</section>
   
 
   <footer class="container site-footer">
-  	<img src="/images/footer-desc.png" srcset="/images/footer-desc.png 1x, /images/footer-desc-@2x.png 2x" alt="" />
-  	<p>
-  		Put together in Goa, by 
-  		<a href="https://twitter.com/kns008" title="Kamal on Twitter">Kamal</a>
-  		& <a href="https://twitter.com/_ighosh" title="Joy on Twitter">Ghosh</a>.
-  	</p>
-  	<p>
-  		© is fallacy. Koi value nahi deta aaj kal.
-  	</p>
+  	<div class="site-footer__inner">
+  		<img src="/images/footer-desc.png" srcset="/images/footer-desc.png 1x, /images/footer-desc-@2x.png 2x" alt="" />
+  		<p>
+  			Put together in Goa, by 
+  			<a href="https://twitter.com/kns008" title="Kamal on Twitter">Kamal</a>
+  			& <a href="https://twitter.com/_ighosh" title="Joy on Twitter">Ghosh</a>.
+  		</p>
+  		<p>
+  			© is fallacy. Koi value nahi deta aaj kal.
+  		</p>
+  	</div>
   </footer>
   </div>
   <script type="text/javascript" src="/js/site.js"></script>
